# Waste_Detection_Segregation_YOLOv8

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  color_space.py  partial_visibility.py  pyproject.toml  requirements.txt  specular_highlight.py  texture_emphasis.py  webcam_detect.py
.github/workflows/: ci.yml
garbage_yolo/: __init__.py  inference.py  requirements.txt  webcam_detect.py
garbage_yolo/augment/: color_space.py  partial_visibility.py  run_mimcgen_pipeline.py  specular_highlight.py  texture_emphasis.py
garbage_yolo/data/: garbage.yaml
garbage_yolo/data/raw/GARBAGE_CLASSIFICATION/train/: labels.cache
garbage_yolo/data/raw/GARBAGE_CLASSIFICATION/val/: labels.cache
garbage_yolo/train/: train_baseline.py
