[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waste-detection-segregation-yolov8"
version = "0.1.0"
description = "Real-time waste detection and segregation using YOLOv8."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Malavika Vinod" }
]
dependencies = [
  "ultralytics>=8.1.0",
  "torch>=2.0",
  "torchvision",
  "opencv-python",
  "albumentations",
  "numpy",
  "matplotlib",
  "scikit-learn",
  "tqdm",
  "onnx",
  "onnxruntime"
]

[project.urls]
Homepage = "https://github.com/Malavikavinod7/waste_detection"
Repository = "https://github.com/Malavikavinod7/waste_detection"

[project.scripts]
waste-detect = "garbage_yolo.webcam_detect:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["garbage_yolo*"]
